<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="nav_blocking"
        android:title="@string/cat_blocking"
        android:summary="@string/cat_blocking_sum"
        android:icon="@drawable/ic_shield"
        app:fragment="blocking" />

    <Preference
        android:key="nav_home"
        android:title="@string/cat_home"
        android:summary="@string/cat_home_sum"
        android:icon="@drawable/ic_layout"
        app:fragment="home" />

    <Preference
        android:key="nav_appearance"
        android:title="@string/cat_appearance"
        android:summary="@string/cat_appearance_sum"
        android:icon="@drawable/ic_palette"
        app:fragment="appearance" />

    <Preference
        android:key="nav_browsing"
        android:title="@string/cat_browsing"
        android:summary="@string/cat_browsing_sum"
        android:icon="@drawable/ic_globe"
        app:fragment="browsing" />

    <Preference
        android:key="nav_offline"
        android:title="@string/cat_offline"
        android:summary="@string/cat_offline_sum"
        android:icon="@drawable/ic_offline"
        app:fragment="offline" />

    <Preference
        android:key="nav_privacy"
        android:title="@string/cat_data"
        android:summary="@string/cat_data_sum"
        android:icon="@drawable/ic_lock"
        app:fragment="privacy" />

    <Preference
        android:key="nav_about"
        android:title="@string/cat_about"
        android:summary="@string/cat_about_sum"
        android:icon="@drawable/ic_info"
        app:fragment="about" />

</PreferenceScreen>
