<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/grp_session" app:iconSpaceReserved="false">
        <SwitchPreferenceCompat android:key="save_session"
            android:title="@string/pref_session" android:summary="@string/pref_session_sum"
            android:defaultValue="false" app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/grp_clear" app:iconSpaceReserved="false">
        <Preference android:key="clear_cache" android:title="@string/clear_cache"
            android:summary="@string/clear_cache_sum" app:iconSpaceReserved="false" />
        <Preference android:key="clear_cookies" android:title="@string/clear_cookies"
            android:summary="@string/clear_cookies_sum" app:iconSpaceReserved="false" />
        <Preference android:key="clear_all_data" android:title="@string/clear_all_data"
            android:summary="@string/clear_all_sum" app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
